# Fenrir

./: .gitmodules  CMakeLists.txt  README
ExportScripts/Blender/: io_export_fenrir.py
ExportScripts/Blender/io_fenrir/: __init__.py
NodeGUI/: CMakeLists.txt
NodeGUI/GUI/: FenrirNodeEditor.pro  mainwindow.ui  oglwidget.cpp  oglwidget.h  pngloader.cpp  pngloader.h
NodeGUI/Nodes/include/: NodeBase.hpp  NodeBasic.hpp  NodeGeo.hpp  NodeTexture.hpp
NodeGUI/Nodes/source/: CMakeLists.txt  NodeBase.cpp  NodeBasic.cpp  NodeGeo.cpp
cmake/: config.txt  macros.txt
images/: logo_v0.1.xcf
include/DataHandler/: Entity.h  Entity.hpp  Enums.h  Enums.hpp  FileLoader.hpp  Mesh.hpp  MeshData.hpp  Structs.hpp
include/Engine/: DrawEngine.h  DrawEngine.hpp  GameEngine.hpp  ParticleRenderComponent.h  ParticleRenderComponent.hpp  RenderComponent.hpp  RenderComponentOpgl2.h  RenderComponentOpgl2.hpp  RenderComponentOpgl3.hpp  RenderPass.h  RenderPass.hpp
lib/include/FenrirMath/: FenrirMath.h  FenrirMath.hpp  Vector2Df.h  Vector3Df.h  type_mat2.hpp  type_mat2.inc  type_mat3.hpp  type_mat3.inc  type_mat4.hpp  type_mat4.inc  type_vec2.hpp  type_vec2.inc  type_vec3.hpp  type_vec3.inc  type_vec4.hpp
lib/include/SFML/System/: String.hpp
lib/msvc/: FenrirMathLib.lib  sfml-main.lib  sfml-system-s.lib
lib32/include/FenrirMath/: FenrirMath.hpp  type_mat3.inc  type_mat4.inc  type_vec3.hpp
lib32/include/SFML/Graphics/: Image.hpp  Shader.hpp
lib32/include/SFML/Window/: Context.hpp
lib32/msvc/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-network-s.lib  sfml-window-s.lib
lib64/include/FenrirMath/: type_vec3.inc  type_vec4.inc
lib64/include/SFML/Graphics/: Matrix3.inl  Renderer.hpp
lib64/include/SFML/Window/: Window.hpp
lib64/linux/dll/: libsfml-audio.so.2.0  libsfml-audio.so.2.0.0  libsfml-graphics.so.2.0  libsfml-graphics.so.2.0.0  libsfml-network.so.2.0  libsfml-network.so.2.0.0  libsfml-system.so.2.0  libsfml-system.so.2.0.0  libsfml-window.so.2.0  libsfml-window.so.2.0.0
source/: CMakeLists.txt  gl3w.c  main.cpp
source/DataHandler/: CMakeLists.txt  Entity.cpp  FileLoader.cpp  Mesh.cpp
source/Engine/: CMakeLists.txt  DrawEngine.cpp  GameEngine.cpp  ParticleRenderComponent.cpp  RenderComponent.cpp  RenderComponentOpgl2.cpp  RenderComponentOpgl3.cpp  RenderPass.cpp
